# boozook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/boozook/: archive.py  font.py  graphics.py  runner.py  text.py  totfile.py
src/boozook/codex/: cat.py  crypt.py  decomp_tot.py  ext.py  replace_tot.py  stk.py  tot.py
