[tool.poetry]
name = "boozook"
version = "0.1.0"
description = "Tools for extracting and editing Coktel Vision game resources"
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pakal = {git = "https://github.com/adventurebrew/pakal.git"}
numpy = "^1.26.4"
pillow = "^10.3.0"
prompt-toolkit = "^3.0.43"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"


[tool.poetry.group.release.dependencies]
pyinstaller = "^6.2.0"
pip-licenses = "^4.3.3"

[tool.poetry.scripts]
boozook = "boozook.runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
